Tratamento de dados - Curso JavaScript #06

--- a/cursoJS/aula06/ex02.html
+++ b/cursoJS/aula06/ex02.html
@@ -10,9 +10,9 @@
 <body>
     <h1>Olá, mundo!</h1>
     <script>
-        window.alert('Hello World');
-        window.prompt('Confirmar')
-         window.confirm("confirme")
+        
+        var a = window.prompt('Nome')
+        window.alert('Olá :'+a);
         
     </script>
 </body>
