Validando Formulário(usando classe)

--- a/cursoJS/Curso de JavaScript e TypeScript do básico ao avançado/Exercicios/JS/aula85/index.html
+++ b/cursoJS/Curso de JavaScript e TypeScript do básico ao avançado/Exercicios/JS/aula85/index.html
@@ -22,23 +22,23 @@
     </ul>
 
     <form action="/" method="post" class="formulario validar">
-      <label for="Nome">Nome:</label><br>
-      <input type="text" class="nome validar"><br>
-      
-      <label for="">Sobrenome:</label><br>
-      <input type="text" class="sobrenome validar"><br>
+      <label class="lbl">Nome:</label>
+      <input type="text" class="nome validar">
 
-      <label for="">CPF:</label><br>
-      <input type="text" class="cpf validar"><br>
+      <label class="lbl">Sobrenome:</label>
+      <input type="text" class="sobrenome validar">
 
-      <label for="">Usuário:</label><br>
-      <input type="text" class="ususario validar"><br>
+      <label class="lbl">CPF:</label>
+      <input type="text" class="cpf validar">
 
-      <label for="">Senha:</label><br>
-      <input type="text" class="senha validar"><br>
+      <label class="lbl">Usuário:</label>
+      <input type="text" class="usuario validar">
 
-      <label for="">Repetir Senha:</label><br>
-      <input type="text" class="repetir-senha validar"><br>
+      <label class="lbl">Senha:</label>
+      <input type="password" class="senha validar">
+
+      <label class="lbl">Repetir Senha:</label>
+      <input type="password" class="repetir-senha validar">
 
       <button type="submit">Enviar</button>
     </form>
@@ -46,6 +46,7 @@
 
   </section>
 
+  <script src="./assets/js/validaCPF.js"></script>
   <script src="./assets/js/main.js"></script>
 </body>
 
