--- a/cursoJS/Curso de JavaScript e TypeScript do básico ao avançado/Exercicios/JS/aula91/index.html
+++ b/cursoJS/Curso de JavaScript e TypeScript do básico ao avançado/Exercicios/JS/aula91/index.html
@@ -16,6 +16,7 @@
     <div class="resultado"></div>
   </section>
 
+  <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
   <script src="./assets/js/main.js"></script>
 </body>
 
