--- a/cursoJS/Curso de JavaScript e TypeScript do básico ao avançado/React/lista-de-tarefas/public/index.html
+++ b/cursoJS/Curso de JavaScript e TypeScript do básico ao avançado/React/lista-de-tarefas/public/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
   <title>Lista de Tarefas</title>
 </head>
 
